--- a/src/components/pdp/pdp-arrow-mapper.json
+++ b/src/components/pdp/pdp-arrow-mapper.json
@@ -10,7 +10,8 @@
       "displayName": "steps",
       "type": "component",
       "repeatable": true,
-      "component": "pdp.steps"
+      "component": "pdp.steps",
+      "required": true
     },
     "type": {
       "type": "enumeration",
@@ -21,7 +22,8 @@
       "default": "pdp-arrow-mapper"
     },
     "title": {
-      "type": "richtext"
+      "type": "richtext",
+      "required": true
     },
     "description": {
       "type": "richtext"
