--- a/src/components/pdp/pdp-know-your-coverage.json
+++ b/src/components/pdp/pdp-know-your-coverage.json
@@ -28,7 +28,8 @@
       "required": true
     },
     "desc": {
-      "type": "richtext"
+      "type": "richtext",
+      "required": false
     },
     "cta": {
       "type": "string"
