--- a/src/components/pdp/know-your-coverage-cards.json
+++ b/src/components/pdp/know-your-coverage-cards.json
@@ -8,7 +8,7 @@
   "attributes": {
     "title": {
       "type": "text",
-      "required": true
+      "required": false
     },
     "desc": {
       "type": "text",
