--- a/src/components/pdp/know-your-coverage-cards.json
+++ b/src/components/pdp/know-your-coverage-cards.json
@@ -11,7 +11,7 @@
       "required": false
     },
     "desc": {
-      "type": "text",
+      "type": "richtext",
       "required": true
     }
   }
