--- a/src/components/wc/wc-components.json
+++ b/src/components/wc/wc-components.json
@@ -1,31 +1,36 @@
 {
-  "collectionName": "components_wc_wc_components",
-  "info": {
-    "displayName": "wc-components"
-  },
-  "options": {},
-  "attributes": {
-    "image": {
-      "type": "string"
-    },
-    "mobileImage": {
-      "type": "string"
-    },
-    "title": {
-      "type": "component",
-      "repeatable": false,
-      "component": "wc.title"
-    },
-    "description": {
-      "type": "component",
-      "repeatable": true,
-      "component": "wc.description"
-    },
-    "items": {
-      "displayName": "items",
-      "type": "component",
-      "repeatable": true,
-      "component": "wc.items"
-    }
-  }
+	"collectionName": "components_wc_wc_components",
+	"info": {
+		"displayName": "wc-components"
+	},
+	"options": {},
+	"attributes": {
+		"image": {
+			"type": "string",
+			"required": true
+		},
+		"mobileImage": {
+			"type": "string",
+			"required": true
+		},
+		"title": {
+			"type": "component",
+			"repeatable": false,
+			"component": "wc.title",
+			"required": true
+		},
+		"description": {
+			"type": "component",
+			"repeatable": true,
+			"component": "wc.description",
+			"required": true
+		},
+		"items": {
+			"displayName": "items",
+			"type": "component",
+			"repeatable": true,
+			"component": "wc.items",
+			"required": true
+		}
+	}
 }
